# opengl_experiments

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: StaticAnalyzers.cmake
config/: core.h.in
include/glad/: glad.h
shaders/fractal/: fractal_fragment.glsl  fractal_vertex.glsl
shaders/triangle/: triangle.vert
src/: main.cpp
src/config/: constants.h  core.h
src/shader/: Shader.cpp
src/shaders/: shader.h
src/shaders/fragment/: triangle.frag
